examples/test/testpolicy19607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19607
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key47: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value31
          key36: value8
      podSelector:
        matchLabels:
          key32: value29
          key44: value23
